2011-04-16 Gabor Simon <gabor.simon@mailbox.hu>
Initial (public) state imported

	*: added
